dnl When changing versions change in both AC_INIT and VERSION
AC_INIT(topmodlibs, 2.0.0, topmod@googlegroups.com)
AC_CONFIG_AUX_DIR(config)

PACKAGE=topmodlibs
VERSION=2.0.0

AC_SUBST(VERSION)
AC_SUBST(PACKAGE)

AM_INIT_AUTOMAKE($PACKAGE, $VERSION)

AC_PROG_CXX
AC_PROG_CXXCPP
AC_PROG_MAKE_SET
AM_PROG_LIBTOOL
AC_LANG_CPLUSPLUS

AC_PROG_INSTALL

AC_CHECK_PROG(HAVE_FLTK,fltk-config, yes, no )

AC_HEADER_STDC

#AC_CONFIG_SUBDIRS( libs/vecmat libs/arcball )

AC_OUTPUT(
	Makefile	
	vecmat/Makefile
	arcball/Makefile)
